# fraenk-api

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  fraenk.py  load_env.sh  pyproject.toml
docs/: API.md  USAGE.md
fixtures/: contracts.json  data_consumption.json
src/fraenk_api/: __init__.py  __main__.py  cli.py  client.py  utils.py
src/fraenk_api/fixtures/: contracts.json
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_client.py  test_main.py  test_simple.py  test_utils.py
tests/archive/: test_init.py  test_main.py  test_utils.py
