[project]
name = "fraenk-api"
version = "0.1.0"
description = "Unofficial Python client for Fraenk mobile data consumption API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
fraenk = "fraenk_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraenk_api"]
